footer com texto novo!

--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -411,9 +411,9 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4 class="titulos-footer">Sobre</h4>
-                    <p class="footer-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
-                        luctus nec ullamcorper
-                        mattis, pulvinar dapibus leo.</p>
+                    <p class="footer-item">Sabrina Modas é um empreendimento que busca trazer modernidade e estilo
+                        através de peças de alta qualidade gerando conforto e autoestima com os melhores preços e
+                        serviços.</p>
                 </div>
                 <div class="col-md-4">
                     <h4 class="titulos-footer">Contato</h4>
