--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -433,6 +433,7 @@
                     <h4 class="titulos-footer">Links úteis</h4>
                     <ul>
                         <li><a class="footer-item" href="views/Contato/index.html">Página de contato</a></li>
+                        <li><a class="footer-item" href="https://www.instagram.com/sabrinamodaas___/">Nosso instagram</a></li>
                     </ul>
                 </div>
             </div>
