--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,32 @@ input:checked+.slider:before {
     width: 100%;
 }
 
+#slider {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .slide {
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+  
+  .active {
+    display: block;
+  }
+  
+  @media screen and (max-width: 768px) {
+    #slider {
+      width: 100%;
+    }
+  
+    .slide {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
 
 /**/
 
