--- a/css/style.css
+++ b/css/style.css
@@ -826,7 +826,7 @@ input:checked+.slider:before {
 .img-sobre {
     width: 120%;
     border-radius: 2px;
-    margin: 0 20px;
+    margin: 0 0px;
     object-fit: cover;
 }
 
@@ -847,6 +847,118 @@ input:checked+.slider:before {
 .text-right {
     position: relative;
     top: 20px;
+}
+
+@media (max-width: 1040px){
+    .text-right{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 950px){
+
+    .titulo-right{
+        font-size: 22px;
+    }
+
+    .text-right{
+        font-size: 12px;
+    }
+
+    .img-sobre{
+        width: 120%;
+        margin: 0;
+    }
+}
+
+@media (max-width: 860px){
+    .container-sobre{
+        display: flex;
+        flex-direction: column;
+        margin: 100px;
+    }
+
+    .titulo-right{
+        font-size: 20px;
+        position: relative;
+        bottom: 5px;
+    }
+
+    .text-right{
+        top: 0;
+    }
+
+    .img-sobre{
+        width: 90%;
+        height: 300px;
+    }
+
+    .container-right-sobre{
+        margin: 45px 30px;
+    }
+
+    .container-img-sobre{
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 650px){
+
+    .container-sobre{
+        margin: 60px;
+        padding: 35px;
+    }
+
+    .container-right-sobre{
+        margin: 40px 0;
+    }
+
+    .img-sobre{
+        width: 100%;
+        height: 230px;
+    }
+}
+
+@media (max-width: 500px){
+    .container-sobre{
+        margin: 40px;
+        padding: 40px;
+    }
+}
+
+@media (max-width: 420px){
+    .container-sobre{
+        margin: 30px;
+        padding: 30px;
+    }
+
+    .img-sobre{
+        height: 200px;
+    }
+
+    .text-right{
+        font-size: 11px;
+    }
+
+    .titulo-right{
+        font-size: 18px;
+        bottom: 4px;
+    }
+
+    .btn-voltar-topo {
+        position: fixed;
+        bottom: 5em;
+        right: 3em;
+        padding: 10px;
+        background-color: transparent;
+        border: 1px solid #FFA7DE;
+        border-radius: 5px;
+        font-size: 8px;
+        cursor: pointer;
+        display: grid;
+        place-items: center;
+    }
 }
 
 footer {
