--- a/views/Login/login.css
+++ b/views/Login/login.css
@@ -40,7 +40,7 @@ body.dark {
     }
 
     .input-box::placeholder{
-        color: #393939;
+        color: #5a5a5a;
     }
 
     .button-esqueci-senha{
