--- a/admin/upload/upload.css
+++ b/admin/upload/upload.css
@@ -186,7 +186,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .container-listaDeProdutos{
     display: grid;
     place-items: center;
-    margin-top: 5em;
+    margin: 5em 0;
 }
 
 .container-listaDeProdutos h2{
