Pequenos detalhes concertados.

--- a/viewsLogado/paginaContatos/contato.css
+++ b/viewsLogado/paginaContatos/contato.css
@@ -281,6 +281,10 @@ input:checked+.slider:before {
         display: none;
     }
 
+    .container-login-cadastro{
+        display: none;
+    }
+
     .mobile-menu-icon {
         display: flex;
         align-items: center;
